--- a/src/app/compnents/plant-detaill/plant-detaill.component.html
+++ b/src/app/compnents/plant-detaill/plant-detaill.component.html
@@ -23,7 +23,7 @@
         <div class="row r3">
             <!-- Plant Image -->
             <div class="col-lg-5 col-md-6 col-sm-12">
-                <img [src]="plant.images[0]" alt="Image of {{ plant.name }}">
+                <img [src]="plant.images" alt="Image of {{ plant.name }}">
             </div>
             <div class="col-lg-7 col-md-6 col-sm-12">
                <router-outlet></router-outlet>
