--- a/src/app/compnents/plant-item/plant-item.component.html
+++ b/src/app/compnents/plant-item/plant-item.component.html
@@ -14,7 +14,7 @@
         </div>
     </div>
 
-    <img [src]="plant.images[0]" width="100px" height="200px" class="card-img-top image" alt="...">
+    <img [src]="plant.images" width="100px" height="200px" class="card-img-top image" alt="...">
     <div class="card-body" style="background-color: #bddac2; border: none;">
 
         <h5 class="card-title title" style="color: #1C593A; font-size: 24px;">{{plant.name}}</h5>
