--- a/src/app/compnents/quiz/quiz.component.html
+++ b/src/app/compnents/quiz/quiz.component.html
@@ -1,4 +1,4 @@
-<div class="mt-5 div1">
+<div class="div1">
     <h1>Quelle plante est faite pour toi ?</h1>
     <form id="plant-quiz">
         <div class="question">
