--- a/src/app/compnents/home/home.component.html
+++ b/src/app/compnents/home/home.component.html
@@ -24,35 +24,41 @@
 
     <div class="carousel-inner">
 
-        <div class="carousel-item active" data-bs-interval="10000">
-            <img src="logo.jpg" class="d-block" style="height: 350px; width: 100%;" alt="...">
-            <div class="carousel-caption d-none d-md-block text-dark">
+        <div class="carousel-item active" data-bs-interval="4000">
+            <a href="listePlantes#plant-fleuries">
+                <img src="first.gif" class="d-block" style="height: 350px; width: 100%;" alt="...">
+            </a>
+            <!-- <div class="carousel-caption d-none d-md-block text-dark">
                 <h5>First slide label</h5>
                 <p>Some representative placeholder content for the first slide.</p>
-            </div>
+            </div> -->
         </div>
 
 
-        <div class="carousel-item" data-bs-interval="2000">
-            <img src="logo.jpg" class="d-block" style="height: 350px; width: 100%;" alt="...">
-            <div class="carousel-caption d-none d-md-block text-dark">
+        <div class="carousel-item" data-bs-interval="4000">
+            <a href="listePlantes#plant-cactus">
+                <img src="second.gif" class="d-block" style="height: 350px; width: 100%;" alt="...">
+            </a>
+            <!-- <div class="carousel-caption d-none d-md-block text-dark">
                 <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the first slide.</p>
-            </div>
+            </div> -->
         </div>
 
 
-        <div class="carousel-item">
-            <img src="logo.jpg" class="d-block" style="height: 350px; width: 100%;" alt="...">
-            <div class="carousel-caption d-none d-md-block text-dark">
+        <div class="carousel-item" data-bs-interval="4000">
+            <a href="listePlantes#plant-purificatrices">
+                <img src="third.gif" class="d-block" style="height: 350px; width: 100%;" alt="...">
+            </a>
+            <!-- <div class="carousel-caption d-none d-md-block text-dark">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the first slide.</p>
-            </div>
+            </div> -->
         </div>
 
     </div>
 
-    <button class="carousel-control-prev buttonCarousel" type="button" data-bs-target="#carouselExampleFade"
+    <!-- <button class="carousel-control-prev buttonCarousel" type="button" data-bs-target="#carouselExampleFade"
         data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
@@ -61,10 +67,10 @@
         data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
-    </button>
+    </button> -->
 </div>
-<button class="button">
-    <span>Show All</span>
+<button class="button mt-3 mb-5 mx-auto d-block w-50" (click)="onShowAllPlants()">
+    <span>Show All Plants</span>
 </button>
 
 <!-- Quiz -->
@@ -76,7 +82,7 @@
 <div class="d-flex justify-content-center row row-cols-1 row-cols-md-4">
     <!-- Fleurs -->
     <div class="col">
-        <a href="/fleurs">
+        <a href="listePlantes#plant-fleuries">
             <div class="card">
                 <div class="circle"></div>
                 <div class="circle"></div>
@@ -86,7 +92,7 @@
     </div>
     <!-- Cactus -->
     <div class="col">
-        <a href="/cactus">
+        <a href="listePlantes#plant-cactus">
             <div class="card">
                 <div class="circle"></div>
                 <div class="circle"></div>
@@ -96,7 +102,7 @@
     </div>
     <!-- Air -->
     <div class="col">
-        <a href="/air">
+        <a href="listePlantes#plant-purificatrices">
             <div class="card">
                 <div class="circle"></div>
                 <div class="circle"></div>
