--- a/src/app/compnents/quiz/quiz.component.css
+++ b/src/app/compnents/quiz/quiz.component.css
@@ -6,6 +6,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     border-bottom: 10px solid #1C593A;
+    margin-top: 120px;
 }
 
 #plant-quiz {
