--- a/src/app/compnents/about-us/about-us.component.html
+++ b/src/app/compnents/about-us/about-us.component.html
@@ -38,7 +38,7 @@
     </div>
 </section>
 
-<div style="height: 200px; background-image: url(wave.png);"></div>
+<div style="height: 200px; background-image: url(waveD.png);"></div>
 
 
 <div class="container">
@@ -123,50 +123,53 @@
             </div>
         </div>
     </section>
+</div>
+
 
     <!-- Activities Section -->
-<section class="bg-light py-5 mt-4 mb-5">
-    <div class="container">
-        <div class="text-center mb-5">
-            <h2>What We Do</h2>
-            <p class="lead">Découvrez nos activités qui rendent PlantBuddy unique.</p>
+    <section class="activities py-5 mt-4 mb-5">
+        <div class="container">
+            <div class="text-white text-center mb-5">
+                <h2>What We Do</h2>
+                <p class="lead">Découvrez nos activités qui rendent PlantBuddy unique.</p>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4 mb-4">
+                    <div class="card activities-card h-100 shadow-sm">
+                        <div class="card-body">
+                            <h5 class="card-title">Vente de Plantes</h5>
+                            <img src="vente.png" class="imgActivities" alt="">
+                            <p class="card-text">
+                                Nous proposons une large sélection de plantes d'intérieur et d'extérieur, soigneusement
+                                choisies pour leur qualité et leur beauté.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card activities-card h-100 shadow-sm">
+                        <div class="card-body">
+                            <h5 class="card-title">Conseils d'Entretien</h5>
+                            <img src="conseil.png" class="imgActivities" alt="">
+                            <p class="card-text">
+                                Notre équipe d'experts fournit des conseils utiles pour prendre soin de vos plantes et les
+                                garder en bonne santé.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card activities-card h-100 shadow-sm">
+                        <div class="card-body">
+                            <h5 class="card-title">Communauté de Passionnés</h5>
+                            <img src="communite.png" class="imgActivities" alt="">
+                            <p class="card-text">
+                                Rejoignez notre communauté en ligne pour partager vos expériences, poser des questions et
+                                vous connecter avec d'autres amateurs de plantes.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="row text-center">
-            <div class="col-md-4 mb-4">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Vente de Plantes</h5>
-                        <p class="card-text">
-                            Nous proposons une large sélection de plantes d'intérieur et d'extérieur, soigneusement
-                            choisies pour leur qualité et leur beauté.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Conseils d'Entretien</h5>
-                        <p class="card-text">
-                            Notre équipe d'experts fournit des conseils utiles pour prendre soin de vos plantes et les
-                            garder en bonne santé.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card h-100 shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">Communauté de Passionnés</h5>
-                        <p class="card-text">
-                            Rejoignez notre communauté en ligne pour partager vos expériences, poser des questions et
-                            vous connecter avec d'autres amateurs de plantes.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-</div>
+    </section>
