--- a/src/app/compnents/home/home.component.html
+++ b/src/app/compnents/home/home.component.html
@@ -79,7 +79,7 @@
 <!-- Explore by Category -->
 <h2 class="text-center mt-5">Explore by Category</h2>
 
-<div class="d-flex justify-content-center row row-cols-1 row-cols-md-4">
+<div class="d-flex justify-content-center row row-cols-1 row-cols-md-4" style="width: 100%;">
     <!-- Fleurs -->
     <div class="col">
         <a href="listePlantes#plant-fleuries">
