--- a/src/app/compnents/panier/panier.component.html
+++ b/src/app/compnents/panier/panier.component.html
@@ -1,3 +1,5 @@
+<a class="back" routerLink="/listePlantes" title="Back to shop"><i class="bi bi-arrow-bar-left"></i></a>
+
 <div class="cart-container">
     <h2 class="cart-header">Shopping Cart <i class="bi bi-cart-check" style="margin-left: 20px;"></i></h2>
     <!-- Total -->
@@ -9,7 +11,7 @@
     @if (tabcart.length > 0) {
     @for (plant of tabcart; track plant.id) {
     <div class="cart-item">
-        <img [src]="plant.images[0]" width="120" height="110" alt="Product 1">
+        <img [src]="plant.images" width="120" height="110" alt="Product 1">
         <span class="text-dark fw-bold fs-5">{{plant.name}}</span>
         <span class="text-danger fw-bold fs-5">{{plant.price | currency:'USD'}}</span>
         <div class="btn-group">
